--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <title>Warmind</title>
     <link rel="icon" type="image/png" href="/favicon.ico">
+    <script type="text/javascript" src="/socketcluster.js"></script>
+    <script src="/sc-codec-min-bin.js"></script>
+    <script src="/phaser.min.js"></script>
+    <script src="/rbush.min.js"></script>
+    <script src="/SAT.min.js"></script>
+    <script src="/channel-grid.js"></script>
+    <script src="/game.js"></script>
     <style>
       html {
         height: 100%;
@@ -12,32 +19,18 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        background-color: #666666;
-      }
-      .customForm {
-          position: fixed;
-          top: 50%;
-          left: 50%;
-          height: 100px;
-          width: 325px;
-          line-height: 100px;
-
-          text-align: center;
-          transform: translate(-50%, -50%);
-          background-color: #ffffff;
-          border-radius: 5px;
-
+        color: #666666;
       }
     </style>
   </head>
   <body>
-    <div class="customForm">
-        <form action="/game.html">
-            Username: <input type="text" name="u"> <input type="submit" value="Submit" >
-        </form>
-    </div>
-    <script>
+    <script type="text/javascript">
 
+      var socket = socketCluster.connect({
+        codecEngine: scCodecMinBin
+      });
+
+      window.onload = gameFunction();
     </script>
   </body>
 </html>
