--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,12 @@
             background-color: #666666;
         }
 
-        .customForm {
+        .centered {
             position: fixed;
             top: 50%;
             left: 50%;
-            height: 100px;
-            width: 325px;
-            line-height: 100px;
+            height: 250px;
+            width: 75%;
 
             text-align: center;
             transform: translate(-50%, -50%);
@@ -33,10 +32,18 @@
     </style>
 </head>
 <body>
-<div class="customForm">
+<div class="centered">
+    <h1>Warmind</h1>
     <form action="/game.html">
         Username: <input type="text" name="u"> <input type="submit" value="Submit">
     </form>
+    <h2>Controls:</h2>
+    <p>
+        Arrow keys to move</br>
+        Q to repair</br>
+        E to activate Quantum Power up</br>
+        1-9 to buy an upgrade</br>
+    </p>
 </div>
 <script>
 
