Sort scoreboard based on kills

--- a/public/postgame.html
+++ b/public/postgame.html
@@ -39,6 +39,7 @@
     <p><b id="scrap"></b> Scrap</p>
     <p><b id="wire"></b> Wire</p>
     <p><b id="chip"></b> Chips</p>
+    <p><b id="quantum"></b> Chips</p>
 
 
 </div>
