--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 <div class="centered">
     <h1>Warmind</h1>
     <form action="/game.html">
-        Username: <input type="text" name="u"> <input type="submit" value="Submit">
+        Username: <input autofocus type="text" name="u"> <input type="submit" value="Submit">
     </form>
     <h2>Controls:</h2>
     <p>
