--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,10 @@
 <body>
 <div class="centered">
     <h1>Warmind</h1>
-    <form action="/game.html">
-        Username: <input autofocus type="text" name="u"> <input type="submit" value="Submit">
+    <form name="userform" action="/game.html">
+        Username: <input autofocus type="text" name="u" pattern="[a-zA-Z0-9]{1,15}"
+                         title="Usernames can only letters and numbers">
+        <input type="submit" value="Submit">
     </form>
     <h2>Controls:</h2>
     <p>
@@ -46,7 +48,16 @@
     </p>
 </div>
 <script>
-
+    function verifyUser(sub) {
+        var letterNumber = /^[0-9a-zA-Z]+$/;
+        if((sub.value.match(letterNumber))){
+            return true;
+        }
+        else {
+            alert("message");
+            return false;
+        }
+    }
 </script>
 </body>
 </html>
