Quantum chips fixed on postgame

--- a/public/postgame.html
+++ b/public/postgame.html
@@ -40,7 +40,7 @@
     <p><b id="scrap"></b> Scrap</p>
     <p><b id="wire"></b> Wire</p>
     <p><b id="chip"></b> Chips</p>
-    <p><b id="quantum"></b> Chips</p>
+    <p><b id="quantum"></b> Quantum Chips</p>
 
     <form action="/">
         <input type="submit" value="Play Again">
@@ -61,6 +61,7 @@
     document.getElementById("wire").innerHTML = getUrlVars()["w"];
     document.getElementById("chip").innerHTML = getUrlVars()["c"];
     document.getElementById("kills").innerHTML = getUrlVars()["k"];
+    document.getElementById("quantum").innerHTML = getUrlVars()["q"];
 </script>
 </body>
 </html>
